# ipsem2025-license-plate

./: .gitignore  AUTHORS.md  CHANGELOG.md  README.md  plan.md  pyproject.toml  tox.ini
.github/workflows/: install.yml  package.yml  release.yml  tests.yml  type_check.yml
src/ipsem2025_license_plate/: cli.py  ipsem2025_license_plate.py
src/ipsem2025_license_plate/datasets/: README.md  __init__.py  base.py  cli.py  custom.py  emnist.py  mnist.py
src/ipsem2025_license_plate/plate_character_extraction/: README.md  correct_perspective.py  extract_images_form_plates.py  generate_dataset_with_labels.py  lpce.py  readme.md
src/ipsem2025_license_plate/plate_character_extraction/tools/: __init__.py  lpce.py  perspective.py
src/ipsem2025_license_plate/plate_extraction/: README.md  detect.py  extract.py
src/ipsem2025_license_plate/plate_extraction/models/: plate_recognizer.pt
src/ipsem2025_license_plate/qnet/: README.md  __init__.py  cli.py  dataset_utils.py  hybrid_net.py  minimal.py  model.py  test.py  train.py  utils.py
src/ipsem2025_license_plate/utils/: README.md  __init__.py  cli_utils.py  logging_utils.py
tests/: conftest.py  test_quantum_config.py
tests/datasets/: test_base.py  test_custom.py  test_emnist.py  test_mnist.py
