[tool.poetry]
name = "ipsem2025-license-plate"
# Do not touch the version
# Is is edited dynamically by the CI job
version = "1.1.0"
description = "IPSEM 2025 License Plate detection."
authors = ["Jan Bronicki <janbronicki@gmail.com>",]
readme = "README.md"
repository = "https://github.com/John15321/ipsem2025-license-plate"
# homepage = ""

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
opencv-python = "^4.11.0.86"
numpy = "^2.2.4"
imutils = "^0.5.4"
tqdm = "^4.67.1"
pytesseract = "^0.3.13"
matplotlib = "^3.10.1"

[tool.poetry.scripts]
ipsem2025-train = "ipsem2025_license_plate.qnet.cli:main"
ipsem2025-dataset = "ipsem2025_license_plate.datasets.cli:main"
ipsem2025-plate-recognizer = "ipsem2025_license_plate.plate_extraction.detect:cli"

[tool.poetry.group.format.dependencies]
black = "^25.1.0"
isort = "^6.0.1"


[tool.poetry.group.dev.dependencies]
tox = "^4.24.1"


[tool.poetry.group.type_check.dependencies]
mypy = "^1.15.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-mock = "^3.14.0"
pytest-cov = "^6.0.0"
toml = "^0.10.2"


[tool.poetry.group.lint.dependencies]
pylint = "^3.3.4"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
