[tool.poetry]
name = "ipsem2025-license-plate"
# Do not touch the version
# Is is edited dynamically by the CI job
version = "1.0.0"
description = "IPSEM 2025 License Plate detection."
authors = ["Jan Bronicki <janbronicki@gmail.com>",]
readme = "README.md"
repository = "https://github.com/John15321/ipsem2025-license-plate"
# homepage = ""

[tool.poetry.dependencies]
python = ">=3.9, <4"
torch = "^2.6.0"
torchvision = "^0.21.0"
qiskit = "^1.4.2"
qiskit-machine-learning = "^0.8.2"
matplotlib = "^3.8.0"
typer = "^0.9.0"
rich = "^13.7.0"
yolov5 = "^7.0.14"

[tool.poetry.scripts]
ipsem2025-train = "ipsem2025_license_plate.qnet.cli:main"
ipsem2025-dataset = "ipsem2025_license_plate.datasets.cli:main"
ipsem2025-plate-recognizer = "ipsem2025_license_plate.plate_extraction.detect:cli"

[tool.poetry.group.format.dependencies]
black = "^25.1.0"
isort = "^6.0.1"


[tool.poetry.group.dev.dependencies]
tox = "^4.24.1"


[tool.poetry.group.type_check.dependencies]
mypy = "^1.15.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-mock = "^3.14.0"
pytest-cov = "^6.0.0"
toml = "^0.10.2"


[tool.poetry.group.lint.dependencies]
pylint = "^3.3.4"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
